--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
 .App {
   text-align: center;
 }
+
+.message-container {
+  width: 100vw;
+  padding: 0 20px;
+}
+
+.message {
+  display:flex;
+  max-width: 200px;
+}
+
+.sender-name {
+  padding-right: 20px;
+}
