--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,49 @@
+body {
+  background-color: #f5f5f5;
+}
 .App {
   text-align: center;
+  font-size: 17px;
 }
 
 .message-container {
-  width: 100vw;
-  padding: 0 20px;
+  width: 90vw;
+  max-width: 1000px;
+  margin: auto;
+  height: 60vh;
+  overflow-y: scroll;
+  padding: 10px 20px;
+  border-top: solid #dfdfdf 2px;
+  align-content: flex-end;
 }
+
+/**************** Message *********************/
 
 .message {
   display:flex;
-  max-width: 200px;
 }
 
 .sender-name {
-  padding-right: 20px;
+  margin-right: 20px;
+  padding: 7px 0;
+  font-size: 20px;
+}
+
+.message-content {
+  background-color: #aacedd;
+  padding: 10px 15px;
+  max-width: 60vw;
+  min-height: 5px;
+  border-radius: 7px;
+  text-align: left;
+}
+
+/**************** Message Form *********************/
+
+.message-input {
+  border: solid #dfdfdf 1px;
+  background-color: white;
+  width: 90vw;
+  max-width: 600px;
+  padding: 10px;
 }
